<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/registerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/civ_icon"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:elevation="3dp"-->
            <!--android:src="@drawable/avatar"-->
            <!--app:civ_border_color="@color/white"-->
            <!--app:civ_border_width="4dp" />-->

            <!--<TextView-->
            <!--android:id="@+id/logo_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/civ_icon"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:text="@string/app_name"-->
            <!--android:textColor="@color/orange"-->
            <!--android:textSize="22sp"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_centerHorizontal="true"/>-->


            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_middle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstnameLayout"
                    style="@style/Widget.TextInputLayout"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstname"
                        style="@style/Widget.TextInputEditText"
                        android:hint="@string/firstname"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastnameLayout"
                    style="@style/Widget.TextInputLayout"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstnameLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastname"
                        style="@style/Widget.TextInputEditText"
                        android:hint="@string/lastname"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/Widget.TextInputLayout"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lastnameLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        style="@style/Widget.TextInputEditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.TextInputLayout"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailLayout"
                    app:passwordToggleTint="@color/orange">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        style="@style/Widget.TextInputEditText"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordConfirmLayout"
                    style="@style/Widget.TextInputLayout"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                    app:passwordToggleTint="@color/orange">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordComfirm"
                        style="@style/Widget.TextInputEditText"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rounded_login_button"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/passwordConfirmLayout"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/login_view"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/bt_register"
                    app:layout_constraintTop_toBottomOf="parent" />


            </android.support.constraint.ConstraintLayout>


        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
